Fixing border cut off

--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ nav ul li a span.rotate{
     grid-template-columns: 25% 25% 25% 13%;
     gap: 30px;
     padding: 10px 10px 10px 10px;
-    width: calc(100% - 17%);
+    width: 80vw;
     text-align: center;
 }
 
